--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <h1>Param Ne Olurdu?</h1>
-    <input type="date" id="tarih">
-    <input type="number" id="tutar" placeholder="Tutar">
+    <input type="date" id="tarih" value="2020-01-01">
+    <input type="number" id="tutar" value="1000" placeholder="Tutar">
     <button onclick="hesapla()">Hesapla</button>
     <div id="sonuc"></div>
     <script src="script.js"></script>
