--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Param Ne Olurdu?</h1>
-    <input type="date" id="tarih" value="2021-01-01">
+    <h1>Hangi tarihte kaç TL paran vardı?</h1>
+
+    <input type="date" id="tarih" value="2020-01-01">
     <input type="number" id="tutar" value="1000" placeholder="Tutar">
     <button onclick="hesapla()">Hesapla</button>
+
     <div id="sonuc"></div>
+
     <script src="script.js"></script>
 </body>
 </html>
